<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dimen_15"
    android:background="@color/light_grey"
    android:layout_marginBottom="@dimen/dimen_15"
    >

    <EditText
        android:id="@+id/et_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_url"
        android:hint="@string/hint_url" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_start"
        android:layout_marginTop="@dimen/dimen_20"
        />
</LinearLayout>