<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/layout_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimen_15"
        android:background="@color/light_grey"
        android:layout_marginBottom="@dimen/dimen_15"
        android:visibility="gone"
        >

        <EditText
            android:id="@+id/et_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_url"
            android:hint="@string/hint_url" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_start"
            android:layout_marginTop="@dimen/dimen_20"
            />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_app_names"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_height="50dp"
        android:layout_below="@+id/layout_settings"
        ></ListView>

    <TextView
        android:id="@+id/tv_url_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lv_app_names"
        android:layout_marginTop="@dimen/dimen_15"
        android:textIsSelectable="true"
        android:text="@string/txt_url_config" />




    <TextView
        android:id="@+id/tv_number_of_apps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_url_config"
        android:layout_marginTop="@dimen/dimen_15"
        android:text="@string/txt_number_of_apps" />
</RelativeLayout>
